상단 메뉴바 꾸미기

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Daehui Goh Github</title>
+    <title>qz7439 Github</title>
+    <link href="css/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <p>This is Daehui Goh github webpage.</p>
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="html/projects.html">projects</a>
+        </nav>
+    </header>
+    <p>This is qz7439 GitHub webpage.</p>
 </body>
 </html>
