--- a/index/index.html
+++ b/index/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>qz7439 Github</title>
-    <link href="css/index.css" rel="stylesheet" type="text/css">
+    <link href="index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="html/projects.html">projects</a>
-        </nav>
+        <a class="upper-menu" href="https://qz7439.github.io">Home</a>
+        <a class="upper-menu" href="html/projects/">projects</a>
     </header>
     <p>This is qz7439 GitHub webpage.</p>
 </body>
