--- a/index/index.html
+++ b/index/index.html
@@ -5,10 +5,10 @@
     <title>qz7439 Github</title>
     <link href="index.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body style="background-color:#faebd7">
     <header>
-        <a class="upper-menu" href="https://qz7439.github.io">Home</a>
-        <a class="upper-menu" href="html/projects/">projects</a>
+        <a class="upper-menu" href="/index">Home</a>
+        <a class="upper-menu" href="../projects">projects</a>
     </header>
     <p>This is qz7439 GitHub webpage.</p>
 </body>
